# cord-client

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd-publish.yml  cd-release.yml  ci-check-release.yml  ci-code.yml  ci-security-cron.yml
src/: errors.rs  lib.rs
