[package]
name = "cord-client"
version = "0.1.0"
edition = "2018"
authors = ["Cord Contributors"]
license = "MPL-2.0"
description = """
The client-side user interfaces for the Cord Platform that publish and subscribe messages
to the Broker.
"""
homepage = "https://cord-proj.org"
repository = "https://github.com/cord-proj/cord-client"
readme = "README.md"
keywords = ["cord", "stream"]
categories = ["network-programming", "data-structures"]
include = ["src/**/*"]

[dependencies]
clap = "2.33"
cord-message = "0.2"
env_logger = "0.7"
error-chain = "0.12"
futures = "0.3"
futures-locks-pre = "0.5.1-pre"
log = "0.4"
retain_mut = "0.1"
termcolor = "1.1"
tokio = { version = "0.2", features = [ "io-std", "io-util", "macros", "rt-threaded", "sync", "tcp" ] }
tokio-util = { version = "0.3", features = [ "codec" ] }
