[package]
name = "cord-client"
version = "0.3.0"
edition = "2021"
authors = ["Cord Contributors"]
license = "MPL-2.0"
description = """
The client-side user interfaces for the Cord Platform that publish and subscribe messages
to the Broker.
"""
homepage = "https://cord-proj.org"
repository = "https://github.com/cord-proj/cord-client"
readme = "README.md"
keywords = ["cord", "stream"]
categories = ["network-programming", "data-structures"]
include = ["src/**/*"]

[dependencies]
clap = { version = "3.0", features = [ "derive" ] }
cord-message = "0.3"
env_logger = "0.9"
error-chain = "0.12"
futures = { version = "0.3" }
futures-locks = "0.7"
log = "0.4"
retain_mut = "0.1"
termcolor = "1.1"
tokio = { version = "1.15", features = [ "io-std", "io-util", "macros", "net", "rt-multi-thread", "sync" ] }
tokio-util = { version = "0.6", features = [ "codec" ] }
